Fixed bug with contact form and email service

--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -10,80 +10,93 @@
   <div *ngIf="messageSentError" class="messageStatusError">
     <h3>Failed to send message, please try again later!</h3>
   </div>
-  <form *ngIf="!messageSentSuccess && !messageSentError" [formGroup]="myForm" (submit)="onSubmit(myForm)">
+  <form *ngIf="!messageSentSuccess && !messageSentError" [formGroup]="emailForm" (submit)="onSubmit(emailForm)">
       <div class="content">
+
         <div class="field">
           <label for="messageInput"><p>Message</p></label>
           <textarea
-                    [class.success]="myForm.controls['message'].valid"
+                    [class.success]="emailForm.controls['message'].valid"
                     id="messageInput"
                     type="text"
                     placeholder="Description"
-                    [formControl]="myForm.controls['message']"
+                    [formControl]="emailForm.controls['message']"
                     rows="6">
           </textarea>
-        <div class="messageSuccess" *ngIf="myForm.controls['message'].valid && myForm.controls['message'].touched"> <img src="app/contact/checkmark.png"></div>
-        <div *ngIf="myForm.controls['message'].touched">
-          <div class="messageError" *ngIf="myForm.controls['message'].hasError('minlength') || myForm.controls['message'].hasError('required')">
+        <div class="messageSuccess" *ngIf="emailForm.controls['message'].valid">
+          <img src="app/contact/checkmark.png">
+        </div>
+        <div *ngIf="emailForm.controls['message'].touched">
+          <div class="messageError" *ngIf="emailForm.controls['message'].hasError('minlength') || emailForm.controls['message'].hasError('required')">
              Your message needs to be at least 10 characters long.
           </div>
        </div>
      </div>
+
      <div class="field">
        <label for="emailInput"><p>Email</p></label>
        <input
-                  [class.success]="myForm.controls['email'].valid"
+                  [class.success]="emailForm.controls['email'].valid"
                  id="emailInput"
                  type="text"
                  placeholder="Description"
-                 [formControl]="myForm.controls['email']"
+                 [formControl]="emailForm.controls['email']"
                  rows="6">
-      <span *ngIf="myForm.controls['email'].valid && myForm.controls['email'].touched"> <img src="app/contact/checkmark.png"> </span>
-     <div *ngIf="myForm.controls['email'].touched" >
-       <div class="formError" *ngIf=" myForm.controls['email'].hasError('required')">
-         Enter your email.
+        <span *ngIf="emailForm.controls['email'].valid">
+           <img src="app/contact/checkmark.png">
+        </span>
+        <div *ngIf="emailForm.controls['email'].touched" >
+           <div class="formError" *ngIf=" emailForm.controls['email'].hasError('required')">
+             Enter your email.
+           </div>
+           <div class="formError" *ngIf="emailForm.controls['email'].hasError('invalidEmail')">
+            Invalid email.
+           </div>
        </div>
-       <div class="formError" *ngIf="myForm.controls['email'].hasError('invalidEmail')">
-        Invalid email.
-       </div>
-    </div>
-  </div>
-  <div class="field">
-    <label for="nameInput"><p>Name</p></label>
-    <input
-              [class.success]="myForm.controls['name'].valid &&  myForm.controls['name'].touched"
-              id="nameInput"
-              type="text"
-              placeholder="Description"
-              [formControl]="myForm.controls['name']"
-              rows="6">
-  <span *ngIf="myForm.controls['name'].valid && myForm.controls['name'].touched"> <img src="app/contact/checkmark.png"> </span>
-  <div *ngIf="myForm.controls['name'].touched" >
-    <div class="formError" *ngIf="myForm.controls['name'].hasError('required')">
-      Enter your name.
-    </div>
- </div>
-</div>
-<div class="field">
-  <label for="captchInput"><p>{{captchaA}} + {{captchaB}} = ?</p></label>
-  <input
-            [class.success]="myForm.controls['captcha'].valid"
-            id="captchaInput"
-            type="text"
-            placeholder="Description"
-            [formControl]="myForm.controls['captcha']"
-            rows="6">
-<span *ngIf="myForm.controls['captcha'].valid && myForm.controls['captcha'].touched"> <img src="app/contact/checkmark.png"> </span>
-<div *ngIf="myForm.controls['captcha'].touched" >
-  <div class="formError" *ngIf="myForm.controls['captcha'].hasError('invalidCaptcha')">
-    Wrong Answer.
-  </div>
-</div>
-</div>
-<div class="buttonArea">
-      <button type="submit" [disabled]="!myForm.valid">Submit</button>
- </div>
-   </div>
+     </div>
 
-  </form>
+    <div class="field">
+      <label for="nameInput"><p>Name</p></label>
+      <input
+                [class.success]="emailForm.controls['name'].valid"
+                id="nameInput"
+                type="text"
+                placeholder="Description"
+                [formControl]="emailForm.controls['name']"
+                rows="6">
+      <span *ngIf="emailForm.controls['name'].valid">
+        <img src="app/contact/checkmark.png">
+      </span>
+      <div *ngIf="emailForm.controls['name'].touched" >
+        <div class="formError" *ngIf="emailForm.controls['name'].hasError('required')">
+          Enter your name.
+        </div>
+       </div>
+     </div>
+
+    <div class="field">
+      <label for="captchInput"><p>{{captchaA}} + {{captchaB}} = ?</p></label>
+      <input
+                [class.success]="emailForm.controls['captcha'].valid"
+                id="captchaInput"
+                type="text"
+                placeholder="Description"
+                [formControl]="emailForm.controls['captcha']"
+                rows="6">
+      <span *ngIf="emailForm.controls['captcha'].valid"> <img src="app/contact/checkmark.png"> </span>
+      <div *ngIf="emailForm.controls['captcha'].touched" >
+        <div class="formError" *ngIf="emailForm.controls['captcha'].hasError('invalidCaptcha')">
+          Wrong Answer.
+        </div>
+      </div>
+    </div>
+
+    <div class="buttonArea">
+          <button type="submit" [disabled]="!emailForm.valid">Submit</button>
+    </div>
+
+  </div>
+
+</form>
+
 </div>
