--- a/app/main-frame/main-frame.html
+++ b/app/main-frame/main-frame.html
@@ -56,8 +56,8 @@
     <div [routerLink] = "['people']" class="sidebar-item" [ngStyle]="{ 'border-right': menuItemsRightBorder[1]}">
       <div class="icon">
        <li>People</li>
-       <img *ngIf="!menuImages[1]" src="{{imagePath}}people2.svg" height="100" width="100" />
-       <img *ngIf="menuImages[1]" src="{{imagePath}}people1.svg" height="100" width="100" />
+       <img *ngIf="!menuImages[1]" src="{{imagePath}}people-fylld.svg" height="100" width="100" />
+       <img *ngIf="menuImages[1]" src="{{imagePath}}people-ofylld.svg" height="100" width="100" />
       </div>
     </div>
     <div [routerLink] = "['map']" class="sidebar-item" [ngStyle]="{ 'border-right': menuItemsRightBorder[2]}">
