Added fancy loading gif

--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
 
   <!-- 3. Display the application -->
   <body scroll="no" style="overflow: hidden">
-    <main-frame>Loading...</main-frame>
+    <main-frame>
+      <center style="margin-top:20%">
+        Loading...
+        <p>
+          <img src="app/css/ajax-loader.gif">
+        </p>
+      </center>
+    </main-frame>
   </body>
 
 </html>
