Updated findperson view

--- a/app/find-person/find-person.html
+++ b/app/find-person/find-person.html
@@ -56,11 +56,10 @@
 			<h3>Navigate to the setup view and fill in the missing pieces.</h3>
 		</div>
 
-		<div *ngIf="!showErrorMessage && !missingConfiguration">
 			<!-- Table displaying the current persons -->
+			<div class="table-wrapper" *ngIf="!showErrorMessage && !missingConfiguration">
 			<table id="person-table">
 				<thead>
-					<th></th>
 					<th (click)="sort('firstname')"><p>Given name</p><mark id="firstname">&#10095;</mark></th>
 					<th (click)="sort('surname')"><p>Family name</p><mark id="surname">&#10095;</mark></th>
 					<th (click)="sort('email')"><p>Email</p><mark id="email">&#10095;</mark></th>
@@ -69,7 +68,7 @@
 				</thead>
 				<tbody id="person-table-body">
 					<tr *ngFor="let person of people; let i = index" (click)="setPerson(person)">
-						<td><img *ngIf="person.status_image" [src]="person.status_image" width="20" height="20" /></td>
+					<!--	<td><img *ngIf="person.status_image" [src]="person.status_image" width="20" height="20" /></td>-->
 						<td>{{ person.given_name }}</td>
 						<td>{{ person.family_name }}</td>
 						<td>{{ person.email }}</td>
@@ -78,9 +77,9 @@
 					</tr>
 				</tbody>
 			</table>
+		</div>
 			<!-- Popup window for the selected person -->
 			<person-profile [person]="currentPerson" [isOn]="isOn"></person-profile>
-		</div>
 		<!-- Padding -->
 		<div style="height:10rem"></div>
 	</div>
