Changed styling of clock after feedback from Daniel, cleaned up find-person.ts

--- a/app/main-frame/main-frame.html
+++ b/app/main-frame/main-frame.html
@@ -1,11 +1,11 @@
-<!-- Load our partials' css file -->
-<link rel="stylesheet" href="main-frame.min.css"/>
+<!-- Load our partials' css file
+<link rel="stylesheet" href="main-frame.min.css"/> -->
 <header class="main-frame-header" #header>
   <div class="icon-wrapper">
     <img class="icon" src="https://www.kth.se/polopoly_fs/1.77257!/KTH_Logotyp_RGB_2013-2.svg"/>
   </div>
   <div class="main-header-title"><h1 [style.font-size.em]="titlefontSize" #titleText>{{ screenInfo.title }}</h1></div>
-  <div class="main-header-clock"><h2>{{ clock }}</h2></div>
+  <div class="main-header-clock"><h2 [innerHTML]="clock"></h2></div>
 </header>
 
 <div class="header-border"></div>
