--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
     <!--<link rel="stylesheet" href="node_modules/normalize.css/normalize.css"/>
     <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css"/>-->
+    <base href="/">
 
   </head>
   <!-- Used by the Angular router ... -->
-  <base href="">
 
   <!-- 3. Display the application -->
   <body scroll="no" style="overflow: hidden">
