--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         </p>
       </center>
     </main-frame>
-  <script type="text/javascript" src="app.bundle.js"></script></body>
+  <script type="text/javascript" src="./app.bundle.js"></script></body>
 
 </html>
