--- a/index.html
+++ b/index.html
@@ -1,25 +1,1 @@
-<html>
-  <head>
-    <title>CScreen</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!--<link rel="stylesheet" href="node_modules/normalize.css/normalize.css"/>
-    <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css"/>-->
-    <base href="/">
-
-  </head>
-  <!-- Used by the Angular router ... -->
-
-  <!-- 3. Display the application -->
-  <body scroll="no" style="overflow: hidden">
-    <main-frame>
-      <center style="margin-top:20%">
-        Loading...
-        <p>
-        <!--  require('app/css/ajax-loader.gif'); -->
-        </p>
-      </center>
-    </main-frame>
-  <script type="text/javascript" src="./interactive-screens/app.bundle.js"></script></body>
-
-</html>
+<html> <head> <title>CScreen</title> <meta name=viewport content="width=device-width,initial-scale=1"/> <meta charset=UTF-8> <link href="./vendor.d830c7f78dfd469db64b.css" rel="stylesheet"><link href="./app.d830c7f78dfd469db64b.css" rel="stylesheet"></head> <body scroll=no style=overflow:hidden> <main-frame> <center style=margin-top:20%> Loading... <p> <img src=././assets/ajax-loader.a51c5608d01acf32df728f299767f82b.gif> </p> </center> </main-frame> <script type="text/javascript" src="./polyfills.d830c7f78dfd469db64b.js"></script><script type="text/javascript" src="./vendor.d830c7f78dfd469db64b.js"></script><script type="text/javascript" src="./app.d830c7f78dfd469db64b.js"></script></body> </html>
