--- a/app/setup-process/setup-process.html
+++ b/app/setup-process/setup-process.html
@@ -1,7 +1,5 @@
-<!-- Load our partials' css file -->
-<link rel="stylesheet" href="setup-process.min.css"/>
 
-<div id="setup">
+<div class="setup">
   <h1>
     Welcome to the CScreen setup
   </h1>
