--- a/app/map/html/map.html
+++ b/app/map/html/map.html
@@ -1,11 +1,9 @@
 
-
  <div class="map_wrapper">
-   <INPUT id="center_button" style="border:2px solid;" type="image" (click)="centerOnMarker()" src="app/map/images/zoom_center.png" height="42" width="42">
+   <img id="center_button" style="border:2px solid;"  (click)="centerOnMarker()" src="../images/zoom_center.png" height="42" width="42">
 		<auto-complete (newLocation)="addDestinationMarker($event)"></auto-complete>
 		  <div class="maps" id="map"></div>
       <div class="error" *ngIf="showError">
           <h1>No address found for this employee.</h1>
       </div>
-
 </div>
