Cleaned up code, removed unused imports, profile about me section is now preserving formatting from KTH's profile website

--- a/app/find-person/person-profile.html
+++ b/app/find-person/person-profile.html
@@ -50,9 +50,7 @@
 					</table>
 					About me
 					<div class="popup-person-line"></div>
-					<div class="popup-person-about">
-						<p>{{ person.about_me }}</p>
-					</div>
+					<div class="popup-person-about" [innerHTML]="person.about_me"></div>
 				</div>
 			</div>
 			<div class="popup-image">
