--- a/app/main-frame/main-frame.html
+++ b/app/main-frame/main-frame.html
@@ -41,9 +41,9 @@
     </div>
     <h2>Departments</h2>
     <div>
-      <b>{{ screenInfo.nearest_department }}</b>
+      <b>{{ screenInfo.nearest_department.name_sv }}</b>
       <div *ngFor="let department of screenInfo.departments">
-        <label *ngIf="!(department === screenInfo.nearest_department)"> {{ department }}</label>
+        <label *ngIf="!(department === screenInfo.nearest_department)"> {{ department.name_sv }}</label>
       </div>
     </div>
   </div>
